--- a/getinvolve.html
+++ b/getinvolve.html
@@ -130,7 +130,13 @@
                         <p>+91 8826568580</p>
                         <p>mehar29arora@gmail.com</p>
                     </div>
-                   
+                    <div class="footer-social">
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-youtube"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="container copyright">
@@ -146,7 +152,8 @@
         </div>
     </div>
     <!-- Footer End -->
- <!-- JavaScript Libraries -->
+    
+        <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <script src="lib/easing/easing.min.js"></script>
@@ -161,3 +168,7 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+
+
+    </body>
+</html>
